--- a/index.html
+++ b/index.html
@@ -548,6 +548,26 @@ document.addEventListener("DOMContentLoaded", function() {
     <iframe id="videoFrame" src="" allowfullscreen></iframe>
 </div>
 
+<section class="course-contact">
+
+    <h2>Dúvidas Sobre o Curso?</h2>
+
+    <p>
+        Caso tenha alguma dúvida específica sobre a Formação ARG Cinemático,
+        entre em contato diretamente pelo email abaixo:
+    </p>
+
+    <div class="contact-box">
+        <span id="courseEmail">seuemail@exemplo.com</span>
+    </div>
+
+    <p class="contact-note">
+        Este canal é destinado exclusivamente para assuntos relacionados ao curso.
+    </p>
+
+</section>
+
+
 <script>
 // Scroll Animation
 const sections = document.querySelectorAll('.section');
@@ -669,4 +689,5 @@ document.addEventListener("mousemove", (e) => {
 
 </body>
 </html>
+
 
