--- a/index.html
+++ b/index.html
@@ -329,6 +329,59 @@
 .arrow.left { left: 0; }
 .arrow.right { right: 0; }
 
+.course-description,
+.course-contact {
+    max-width: 900px;
+    margin: 80px auto;
+    text-align: center;
+    padding: 0 20px;
+}
+
+.course-description h2,
+.course-contact h2 {
+    font-size: 28px;
+    margin-bottom: 25px;
+}
+
+.course-description p {
+    margin-bottom: 18px;
+    line-height: 1.6;
+    opacity: 0.9;
+}
+
+.disclaimer {
+    font-size: 14px;
+    opacity: 0.6;
+    margin-top: 30px;
+}
+
+.course-contact p {
+    margin-bottom: 20px;
+    opacity: 0.9;
+}
+
+.contact-box {
+    display: inline-block;
+    padding: 15px 30px;
+    border: 1px solid rgba(255, 46, 46, 0.4);
+    border-radius: 8px;
+    background: #141418;
+    font-weight: bold;
+    letter-spacing: 1px;
+    transition: 0.3s ease;
+}
+
+.contact-box:hover {
+    border-color: #FFD700;
+    box-shadow: 0 0 20px rgba(255, 215, 0, 0.3);
+}
+
+.contact-note {
+    margin-top: 20px;
+    font-size: 14px;
+    opacity: 0.6;
+}
+
 
     </style>
 </head>
@@ -689,5 +742,6 @@ document.addEventListener("mousemove", (e) => {
 
 </body>
 </html>
+
 
 
