--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formação ARG Cinemático</title>
+    <title>Formação ARG Cinematográfico</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
@@ -515,7 +515,7 @@ document.addEventListener("DOMContentLoaded", function() {
             <div class="arg-lid bottom"></div>
         </div>
     </div>
-    <h1>FORMAÇÃO ARG CINEMÁTICO</h1>
+    <h1>FORMAÇÃO ARG CINEMATOGRÁFICO</h1>
     <p>Aprenda a criar universos misteriosos dentro do Minecraft que prendem a audiência.</p>
 </section>
 
@@ -742,6 +742,7 @@ document.addEventListener("mousemove", (e) => {
 
 </body>
 </html>
+
 
 
 
