--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@ document.addEventListener("DOMContentLoaded", function() {
     </p>
 
     <div class="contact-box">
-        <span id="courseEmail">seuemail@exemplo.com</span>
+        <span id="courseEmail">formacaoargcontato@gmail.com</span>
     </div>
 
     <p class="contact-note">
@@ -742,6 +742,7 @@ document.addEventListener("mousemove", (e) => {
 
 </body>
 </html>
+
 
 
 
